Changelog UG-Miner 6.6.3 2025/11/06
===================================

Improvements:
- Core: Disable close button in text console, use 'Q' key to stop UG-Miner; this ensures closing all running miners
- Core: Remove obsolete code & minor code optimizations

Miner changes:
- OneZeroMiner-v1.6.5
- SRBMinerMulti-v3.0.1
- Wildrig-v0.46.7


Changelog UG-Miner 6.6.2 2025/11/04
===================================

Fixes:
- Core: Miners not mining for donation account (miners were not getting restarted)
- Core / Includes.psm1: Function 'Get-AllDAGdata' querying block explorers more often than needed

Miner changes:
- SRBMinerMulti-v3.0.0


Changelog UG-Miner 6.6.1 2025/11/02
===================================

Fixes:
- Core: Miners not changing from 'unavailable' to 'idle' in some scenarios


Changelog UG-Miner 6.6.0 2025/10/31
===================================

Enhancements:
- Core: Removed configuration item 'ShowColumnPool' (Information is already contained in the miner name)

Improvements:
- Core: Remove obsolete code & minor code optimizations
- Core: Use $Session.Config for running configuration
- LegacyGUI: Minor code optimizations

Miner changes:
- MiniZ-v2.5e3
- SRBMinerMulti-v2.9.9
- Wildrig-v0.46.4


Changelog UG-Miner 6.5.17 2025/10/25
====================================

Enhancements:
- Core / Console window: Add '5' hot key to enable / disable API and web GUI
- Web GUI / Configuration editor: Add checkboxes to toggle balances tracker per pool

Improvements:
- Core: Remove obsolete code & minor code optimizations
- LegacyGUI: Minor code optimizations

Miner changes:
- OneZeroMiner-v1.6.4
- Wildrig-v0.46.2


Changelog UG-Miner 6.5.16 2025/10/19
====================================

Fixes:
- Core / Includes.psm1: Do not show "Failed to load DAG data from 'https://prohashing.com/api/v1/currencies'." for non-DAG currencies
- Legacy GUI: Do not ask for confirmation when unloading GUI from console window ('4' key)

Miner changes:
- OneZeroMiner-v1.6.3