@@ -61,6 +61,7 @@
   "CTXC": "Cuckaroo30CTX",
   "CY": "Scrypt",
   "DASH": "X11",
+  "DCR": "Blake3dcr",
   "DEV": "Scrypt",
   "DGB": "Qubit",
   "DGC": "X11",
