@@ -23,13 +23,15 @@ Version date:   2025/11/06
 
 If (-not ($Devices = $Session.EnabledDevices.Where({ $_.Type -eq "CPU" -or $_.Type -eq "INTEL" -or ($_.Type -eq "AMD" -and $_.Architecture -notmatch "GCN[1-3]" -and $_.OpenCL.ClVersion -ge "OpenCL C 2.0") -or ($_.OpenCL.ComputeCapability -ge "5.0" -and $_.OpenCL.DriverVersion -ge "510.00") }))) { Return }
 
-$URI = "https://github.com/doktor83/SRBMiner-Multi/releases/download/3.0.1/SRBMiner-Multi-3-0-1-win64.zip"
+$URI = "https://github.com/doktor83/SRBMiner-Multi/releases/download/3.0.2/SRBMiner-Multi-3-0-2-win64.zip"
 $Name = [String](Get-Item $MyInvocation.MyCommand.Path).BaseName
 $Path = "Bin\$Name\SRBMiner-MULTI.exe"
 $DeviceEnumerator = "Type_Vendor_Slot"
 
-# Performance improvements for algorithm 'tht'
-# Auto affinity improvements for algorithm 'tht'
+# Minor performance improvement for algorithm 'tht' on CPUs with AVX512
+# Fixed support for algorithm 'xhash' on NVIDIA 4000 series (Ada), broke in previous miner version
+# Fixed support for some NVIDIA GPU's that get the 'couldn't create program for ctx->algorithm' error
+# Removed parameter '--disable-ptx-check' as its not needed anymore
 
 # Algorithm parameter values are case sensitive!
 $Algorithms = @( 
